# Copyright 2016 The Chromium Authors. All rights reserved.
# Use of this source code is governed by a BSD-style license that can be
# found in the LICENSE file.

import("//mojo/public/tools/bindings/mojom.gni")

mojom("interfaces") {
  sources = [
    "mojom/hello_world.mojom",
  ]
}

if (is_ios) {
  shared_library("platform_lib") {
    output_name = "HelloWorld"

    sources = [
      "src/hello_world_impl.cc",
      "src/hello_world_impl.h",
    ]
    deps = [
      "//sky/services/dynamic:dylib",
      ":interfaces",
    ]
  }
}

group("hello_world") {
  data_deps = [
    ":platform_lib"
  ]
}
